# Py-TarkSnipeBot

./: .gitignore  CONTRIBUTING.md  __main__.py  client.py  configuration.py  data_list.py  debug.py  image_rec.py  launcher.py  logger.py  old_main.py  pyproject.toml  setup_msi.py  states.py
bot/: client.py  flea_interactions.py  launcher.py
debug/: debug.py
interface/: help.py  layout.py  stats.py
pytarksnipebot/: __main__.py  states.py
pytarksnipebot/bot/: client.py  data_list.py  launcher.py
pytarksnipebot/debug/: debug.py
pytarksnipebot/interface/: help.py  layout.py  stats.py
pytarksnipebot/utils/: caching.py  image_rec.py  logger.py
utils/: logger.py
