[tool.poetry]
name = "pytarksnipebot"
version = "0.1.0"
description = ""
authors = ["Matthew Miglio <tarkbot@pyclashbot.dev>"]
readme = "README.md"
include = ["README.md", "pytarkbotsnipebot/utils/reference_images/**/*.png"]


[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.5"
joblib = "^1.3.1"
Pillow = "^10.0.0"
numpy = "^1.25.0"
opencv-python = "^4.8.0.74"
PyGetWindow = "^0.0.9"
PyAutoGUI = "^0.9.54"
pywin32 = "^306"
screeninfo = "^0.8.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3"
black = "^23.3.0"
isort = "^5.12.0"
prospector = "^1.10.2"


[tool.poetry.group.build]
optional = true


[tool.poetry.group.build.dependencies]
Cx_Freeze = [{ version = "^6.15.2", platform = 'win32' }]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = "black"


[tool.pylint.main]
ignore = ["build", "debug.py"]
py-version = "3.10"
suggestion-mode = true
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "C0301", # line-too-long
    "C0103", # invalid-name
]
extension-pkg-whitelist = "win32gui"
